Implement GetArticle and CreateArticle API (#15)
